fix ronded buttons gap & blue section text selection

--- a/src/layout/common.css
+++ b/src/layout/common.css
@@ -40,7 +40,6 @@ button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  pointer-events: none;
 }
 
 .button-rounded {
